@@ -18,7 +18,8 @@ libkdeprint_la_SOURCES = kmfactory.cpp kmjob.cpp kmjobmanager.cpp kmmanager.cpp 
 		         kprintpreview.cpp kmfiltermanager.cpp kprintdialog.cpp kprinter.cpp kprinterimpl.cpp kprintdialogpage.cpp \
 			 kpcopiespage.cpp kpdriverpage.cpp kprinterpropertydialog.cpp kpgeneralpage.cpp kpqtpage.cpp \
 			 kmthreadjob.cpp kpipeprocess.cpp kprintfilter.cpp kpfilterpage.cpp \
-			 kmspecialmanager.cpp kdeprintcheck.cpp plugincombobox.cpp kpreloadobject.cpp kfilelist.cpp
+			 kmspecialmanager.cpp kdeprintcheck.cpp plugincombobox.cpp kpreloadobject.cpp kfilelist.cpp \
+			 kprintaction.cpp
 libkdeprint_la_LDFLAGS = $(all_libraries) -version-info 4:0 -no-undefined
 libkdeprint_la_LIBADD = $(LIB_KPARTS) $(LIBZ)
 libkdeprint_la_METASOURCES = AUTO
@@ -31,7 +32,7 @@ noinst_HEADERS = kmdbentry.h kmfactory.h kmjob.h kmjobmanager.h \
 		 kmfiltermanager.h kpfilterpage.h kmspecialmanager.h kdeprintcheck.h plugincombobox.h \
 		 kfilelist.h
 
-include_HEADERS = kprinter.h
+include_HEADERS = kprinter.h kprintaction.h
 
 kdeprint_HEADERS = kprintdialogpage.h kpreloadobject.h kmmanager.h kmprinter.h kmobject.h
 kdeprintdir = $(includedir)/kdeprint
